fix z-index again

--- a/frontend/src/HOC/Header/Header.module.css
+++ b/frontend/src/HOC/Header/Header.module.css
@@ -6,7 +6,6 @@
   background-color: var(--bg-darkest);
   padding: 0 4.8rem;
   justify-content: space-between;
-  z-index: 10;
 }
 
 .btnCatalog svg {
